--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
 
   <body> 
     <div class="container">
-      <%= render "layouts/header"%> 
+      <%= render "layouts/header"%>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
       <%= yield %>
-      </div>
+    </div>
     <%= render "layouts/footer"%>
   </body>
 </html>
