--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
   </head>
 
   <body> 
@@ -16,6 +17,5 @@
         <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
-    <%= render "layouts/footer"%>
   </body>
 </html>
