--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -4,3 +4,13 @@
   padding: 15px;
   margin: auto
 }
+
+.user-img{
+  width: 50%;
+  border-radius: 50%;
+  height: 200px;
+}
+
+.attachment__caption{
+  display: none;
+}
