--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,12 @@
 <h2 class="text-center">新規投稿</h2>
   <%= form_with model: @post, local:true do |form| %>
     <div class="form-group">
-      <%= form.label :content %><br />
+    <%= form.label :title, "タイトル" %><br />
+    <%= form.text_field :title, class:"form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :content, "本文" %><br />
       <%= form.rich_text_area :content %>
     </div>
     <%= form.label :category, 'カテゴリ' %>
