--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -49,8 +49,8 @@
   <div class="row">
     <% @users.each do |user| %>
       <div class="col-lg-4">    
-        <%= image_tag(user.image, class: "bd-placeholder-img rounded-circle", width: "140px", height: "140px") %>
-        <h2>Heading</h2>
+        <%= link_to image_tag(user.image, class: "user-img"), user_path(user.id) %>
+        <h2><%= user.username %></h2>
         <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
       </div>
     <% end %>
