--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body> 
-    <div class="container">
+    <div class="container-fluid">
       <%= render "layouts/header"%>
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
