--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -45,14 +45,33 @@
       <span class="sr-only">Next</span>
     </a>
   </div> %>
-<div class="container marketing mt-5">
-  <div class="row">
-    <% @users.each do |user| %>
-      <div class="col-lg-4">    
-        <%= link_to image_tag(user.image, class: "user-img"), user_path(user.id) %>
-        <h2><%= user.username %></h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-      </div>
-    <% end %>
-  </div>
+  
+<div class="row">
+  <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+    <div class="row ml-5">
+      <% @users.each do |user| %>
+        <div class="col-lg-4">    
+          <%= link_to image_tag(user.image, class: "user-img"), user_path(user.id) %>
+          <h2><%= user.username %></h2>
+          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        </div>
+      <% end %>
+    </div>
+  </main>
+    <nav class="col-md-2 d-none d-md-block sidebar">
+    <div class="sidebar-sticky">
+      <h4>カテゴリー別</h2>
+      <ul class="nav flex-column">
+        <% @categories.each do |category| %>
+        <li class="nav-item mb-3">
+          <%= link_to category_path(category.id) do %>
+            <%= category.name %>
+          <% end %>
+          </a>
+        </li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
 </div>
+
