--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,17 @@
-<div class="row"> 
-  <% @post.each do |post|%> 
-    <div class="col-4">
-      <div class="card border-primary mb-3" style="max-width: 18rem;">
-        <%= link_to post_path(post.id) do %>
-          <div class="card-header"><%= post.title %></div>
-            <div class="card-body text-primary">
-              <p class="card-text"><%= post.created_at.strftime("%Y/%m/%d %H:%M") %></p>
+<div class="container">
+  <div class="row"> 
+    <% @post.each do |post|%> 
+      <div class="col-4">
+        <div class="card border-primary mb-3" style="max-width: 18rem;">
+          <%= link_to post_path(post.id) do %>
+            <div class="card-header"><%= post.title %></div>
+              <div class="card-body text-primary">
+                <p class="card-text"><%= post.created_at.strftime("%Y/%m/%d %H:%M") %></p>
+              </div>
             </div>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
