--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,10 @@
-<%= @post.content %>
-<% @post.post_category_relations.each do |categories| %>
-  <%= categories.category.name%>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class=col-12>
+  <%= @post.content %>
+  <% @post.post_category_relations.each do |categories| %>
+    <%= categories.category.name%>
+  <% end %>
+</div>
+</div>
+</div>
